--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "1.0.0",
   "description": "simple shop template",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "gh-pages": "^2.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
-    "run-sequence": "^2.2.1"
-  }
+    "gulp-sourcemaps": "^2.6.5"
+  },
+  "scripts": {
+    "build": "gulp build",
+    "start": "npm run build && gulp serve",
+    "deploy": "gh-pages -d build"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "IE 11",
+    "Firefox ESR"
+  ]
 }
