--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-svgstore": "^7.0.1"
   },
   "scripts": {
     "build": "gulp build",
